# tic-tac-toe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-tic-tac-toe/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tic-tac-toe/checklists/: requirements.md
specs/001-tic-tac-toe/contracts/: openapi-outline.md
src/tictactoe/: __init__.py  config.py
src/tictactoe/api/: deps.py  main.py  schemas.py
src/tictactoe/api/routers/: auth.py  games.py
src/tictactoe/application/: auth_service.py  dto.py  exceptions.py  game_service.py  ports.py
src/tictactoe/cli/: __main__.py
src/tictactoe/domain/: board.py  exceptions.py  game.py
src/tictactoe/infrastructure/: db.py  security.py
src/tictactoe/infrastructure/persistence/: models.py  repositories.py
tests/: _helpers.py  conftest.py
tests/integration/: test_auth_api.py  test_game_flow_api.py  test_persistence.py
tests/unit/: test_board.py  test_game_rules.py
